--- a/css/estilos.css
+++ b/css/estilos.css
@@ -3,7 +3,9 @@ body{
 }
 
 .bg-nav{
-    background-color: #000000d0;
+    background-color: rgba(0,0,0,0.6);
+    width: 100%;
+    z-index: 1;
 }
 
 .bg-nav a{
@@ -29,3 +31,10 @@ body{
 .logo{
     width: 200px;
 }
+
+.carousel-item{
+    width: 100%;
+    height: 500px;
+}
+
+
