--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,11 +1,21 @@
-body{
-    color: #ffff;
+@import url('https://fonts.googleapis.com/css2?family=Sevillana&display=swap');
+
+header{
+    position: relative;
 }
 
 .bg-nav{
     background-color: rgba(0,0,0,0.6);
     width: 100%;
-    z-index: 1;
+    z-index: 30;
+    color: #ffff;
+}
+
+.bg-dark{
+    color: #ffff;
+    position: absolute;
+    z-index: 40;
+    width: 100%;
 }
 
 .bg-nav a{
@@ -37,4 +47,53 @@ body{
     height: 500px;
 }
 
+.linea{
+    width: 40%;
+    border: 3px solid #93723e;
+}
 
+.img-acerca{
+    width: 450px;
+    border-radius: 10px;
+}
+
+.container-img img{
+    width: 100%;
+}
+
+.bg-menu{
+    width: 100%;
+}
+
+.titulo{
+    font-family: 'Sevillana', cursive;
+    font-size: 60px;
+    color: #93723e;
+}
+
+.section-menu{
+    position:absolute;
+
+}
+
+.section-text{
+    position:absolute;
+    top: 15rem;
+    right: 28rem ;
+    font-family: 'Sevillana', cursive;
+    color:#fff;
+    text-shadow: 1px 1px 2px  rgb(0, 0, 0);
+}
+
+.section-text h2{
+    font-size: 70px;    
+}
+
+.img-menu{
+    transition: transform .3s;
+}
+
+.img-menu:hover{
+    transform: scale(1.2);
+    transition: transform .3s;
+}
