--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Sevillana&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
 
 header{
     position: relative;
@@ -55,6 +56,10 @@ header{
 .img-acerca{
     width: 450px;
     border-radius: 10px;
+}
+
+.texto-secundario{
+    font-family: 'Playfair Display', serif;
 }
 
 .container-img img{
@@ -115,15 +120,17 @@ header{
 
 .titulo-menu{
     color: #93723e;
+    font-family: 'Playfair Display', serif;
 }
 
 .precio{
     color: #93723e;
+    font-family: 'Playfair Display', serif;
 }
 
 .reservacion img{
     width: 100%;
-    height: 110vh;
+    height: 120vh;
 }
 
 .reservacion{
@@ -142,11 +149,12 @@ header{
 
 .formulario form{
     position: absolute;
-    top: 100px;
+    top: 120px;
     left: 300px;
     background-color: rgb(147, 114, 62, 0.6);
     padding: 20px;
     border-radius: 20px;
+    font-family: 'Playfair Display', serif;
 }
 
 .form-label{
@@ -163,4 +171,29 @@ header{
 .testimonios h4{
     color: #93723e;
     font-size: 30px;
+    font-family: 'Playfair Display', serif;
+}
+
+.carousel-testimonio{
+    height: 340px;
+}
+
+footer{
+    
+    font-family: 'Playfair Display', serif;
+    background-color: rgb(0, 0, 0);
+    color: #fff;
+}
+
+.footer-logo{
+    width: 200px;
+}
+
+.copy{
+    background-color: rgb(24, 22, 22);
+}
+
+.copy p{
+    margin: 1px 0;
+    padding: 10px 0;
 }
