--- a/css/estilos.css
+++ b/css/estilos.css
@@ -181,7 +181,6 @@ form{
 }
 
 footer{
-    
     font-family: 'Playfair Display', serif;
     background-color: rgb(0, 0, 0);
     color: #fff;
@@ -198,6 +197,17 @@ footer{
 .copy p{
     margin: 1px 0;
     padding: 10px 0;
+}
+
+.menu-especialidades{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    background-color: rgb(0, 0, 0);
+    padding: 5px;
+    color: #ffff;
+    font-family: 'Playfair Display', serif;
+    font-weight: 700;
 }
 
 @media screen and (max-width: 767px){
@@ -239,5 +249,11 @@ footer{
     .carousel-testimonio{
         height: 500px;
         object-fit: contain;
+    }
+
+    .menu-especialidades{
+        flex-direction: column;
+        text-align: center;
+        padding: 0;
     }
 }
