--- a/css/estilos.css
+++ b/css/estilos.css
@@ -210,6 +210,57 @@ footer{
     font-weight: 700;
 }
 
+.card-menu{
+    position: relative;
+    border: 1px solid #93723e;
+    width: 350px;
+}
+
+.card-img{
+    position: relative;
+    width: 100%;
+}
+
+
+.card-bg{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 60%;
+    background-color: rgb(0, 0, 0, 0.7);
+    color: #ffff;
+    font-family: 'Playfair Display', serif;
+    opacity: 0;
+    transition: opacity 1.1s;
+}
+
+.card-bg:hover{
+    opacity: 1;
+    height: 60%;
+    transition: opacity 1.1s;
+}
+
+.card-bg p{
+    font-size: 18px;
+}
+
+.card-bg button{
+    background-color: #93723e;
+    color: #ffff;
+}
+
+.card-bg button:hover{
+    background-color: #93723e;
+    color: #ffffffad;
+}
+
+
+.menu-sandwich{
+    margin: auto;
+}
+
+
 @media screen and (max-width: 767px){
     .logo{
         width: 150px;
